Garbage Collector taming